--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -22,16 +22,22 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <!--
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment_container">
 
-            <!--<include layout="@layout/fragment_warning" />-->
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+    -->
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container">
 
+    </LinearLayout>
 
 </LinearLayout>
