--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#f3a300</color>
     <color name="colorPrimaryDark">#002f60</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#0077cc</color>
 </resources>
