--- a/app/src/main/res/drawable/spinner_bg.xml
+++ b/app/src/main/res/drawable/spinner_bg.xml
@@ -7,7 +7,7 @@
         <inset android:insetLeft="-1dp" android:insetRight="-1dp" android:insetTop="-1dp">
             <shape android:shape="rectangle">
                 <stroke android:width="1dp"
-                    android:color="@color/colorAccent" />
+                    android:color="#333333" />
                 <solid android:color="#00ff0000" />
             </shape>
         </inset>
