--- a/app/src/main/res/layout/fragment_warning.xml
+++ b/app/src/main/res/layout/fragment_warning.xml
@@ -4,7 +4,20 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/fragment_padding"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/fragment_warning"
+    android:clickable="true"
+    android:focusableInTouchMode="true">
+
+    <EditText
+        android:id="@+id/edit_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="8dp"
+        android:inputType="date"
+        android:textColor="@color/colorAccent"
+        android:drawableRight="@drawable/ic_today"/>
 
     <Spinner
         android:id="@+id/spinner_linea"
@@ -23,5 +36,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <EditText
+        android:id="@+id/edit_ofs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="18dp"
+        android:inputType="text"
+        android:textColor="@color/colorAccent"
+        android:drawableRight="@drawable/ic_search"
+        android:hint="Indique una OF"/>
+
 
 </LinearLayout>
