--- a/app/src/main/res/drawable/spinner_bg.xml
+++ b/app/src/main/res/drawable/spinner_bg.xml
@@ -4,6 +4,7 @@
     <item android:state_pressed="true" android:drawable="@android:color/white" />
     <item android:state_selected="true" android:drawable="@android:color/white" />
     <item>
+        <!--
         <inset android:insetLeft="-1dp" android:insetRight="-1dp" android:insetTop="-1dp">
             <shape android:shape="rectangle">
                 <stroke android:width="1dp"
@@ -11,5 +12,14 @@
                 <solid android:color="#00ff0000" />
             </shape>
         </inset>
+            -->
+
+        <shape android:shape="line">
+            <stroke android:width="1dp"
+                android:color="#333333" />
+            <solid android:color="#00ff0000" />
+            <size android:height="2dp" />
+            <padding android:bottom="25dp" />
+        </shape>
     </item>
 </selector>
