--- a/app/src/main/res/layout/fragment_selector.xml
+++ b/app/src/main/res/layout/fragment_selector.xml
@@ -7,7 +7,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerView_ofs"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"/>
