--- a/app/src/main/res/layout/fragment_select_inc.xml
+++ b/app/src/main/res/layout/fragment_select_inc.xml
@@ -2,19 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/fragment_padding"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical">
 
     <Spinner
-        android:id="@+id/spinner_linea"
+        android:id="@+id/spinner_zona"
         style="@style/Widget.AppCompat.Spinner"
         android:layout_width="match_parent"
         android:layout_height="?attr/dropdownListPreferredItemHeight"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/textline"
+        android:layout_margin="8dp"
+        android:background="@android:color/white"
         android:dropDownWidth="match_parent"
         android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
         android:popupBackground="@color/colorSecondaryText"
@@ -23,5 +21,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/recyclerView_inc"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:background="@color/colorSecondaryBackground"/>
 
 </LinearLayout>
