--- a/app/src/main/res/layout/fragment_select_of.xml
+++ b/app/src/main/res/layout/fragment_select_of.xml
@@ -3,14 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layoutDirection="rtl"
-        android:background="@color/colorAccent">
+        android:layout_margin="8dp"
+        android:background="@drawable/search">
 
     </androidx.appcompat.widget.SearchView>
 
@@ -20,6 +21,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        android:background="@color/cardview_dark_background"/>
+        android:background="@color/colorSecondaryBackground"/>
 
 </LinearLayout>
