--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -10,13 +10,13 @@
     <Spinner
         android:id="@+id/spinner_center"
         style="@style/Widget.AppCompat.Spinner"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="?attr/dropdownListPreferredItemHeight"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/spinner_bg"
-        android:dropDownWidth="300dp"
+        android:background="@drawable/textline"
+        android:dropDownWidth="match_parent"
         android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
         android:popupBackground="@android:color/white"
         android:popupElevation="3dp"
@@ -25,25 +25,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <com.google.android.material.textfield.TextInputLayout
+    <EditText
+        android:id="@+id/edit_router"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="8dp">
-
-        <EditText
-            android:id="@+id/edit_router"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="URL del servidor" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="8dp"
+        android:inputType="text"
+        android:hint="URL del servidor" />
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+        android:layout_marginRight="5dp"
         android:padding="10dp"
         android:textColor="@android:color/white"
         android:id="@+id/btn_settings"
