--- a/app/src/main/res/layout/fragment_warning.xml
+++ b/app/src/main/res/layout/fragment_warning.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="8dp"
         android:inputType="date"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimaryText"
         android:drawableRight="@drawable/ic_today"/>
 
     <EditText
@@ -26,9 +26,21 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="18dp"
         android:inputType="text"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimaryText"
         android:drawableRight="@drawable/ic_search"
         android:hint="Indique una OF"/>
+
+    <EditText
+        android:id="@+id/edit_incidencia"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="18dp"
+        android:inputType="text"
+        android:textColor="@color/colorPrimaryText"
+        android:drawableRight="@drawable/ic_search"
+        android:hint="Indique una incidencia"/>
 
 
 </LinearLayout>
