--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,7 +3,7 @@
 
     <group>
         <item
-            android:id="@+id/nav_warning"
+            android:id="@+id/nav_incidencias"
             android:icon="@drawable/ic_warning"
             android:title="Incidencias"/>
         <item
